测开17期 第2次

--- a/testDatas/yamlData.yml
+++ b/testDatas/yamlData.yml
@@ -5,22 +5,37 @@
 #相当于 ['a','b','c']
 
 add:
-  datas:
-    - [3.1415926,0.1,3.241592]
-    - [100,200,300]
-    - [1,0,1]
-    - [0.12,0.1,0.22]
-    - [-5,5,0]
-    - [-0.25,-0.147,-0.39]
+  int:
+    datas:
+      - [1000,222,1222]
+      - [0,0,0]
+      - [-5,5,0]
+      - [-110,-3,-113]
+      - [-2,88,86]
+    ids: ['hundr','zero','zero2','fushu','zhengshu']
 
-  ids: ['signle1','hund','zero','xiaoshu','fushu','mix']
 
-  datad:
-    - [8,4,2]
-    - [3,9,0.3]
-    - [-1,-1,1]
-    - [100,0,0]
-    - [0.77,0.4,1.92]
-    - [0,1000,0]
+  float:
+    datas:
+      - [3.1415926,0.1,3.241592]
+      - [0.12,0.1,0.22]
+      - [-0.25,-0.147,-0.39]
+    ids: ['long','short','fushu']
+
+
+div:
+  nonzero:
+    datas:
+      - [56,8,7]
+      - [9,16,0.75]
+      - [-1,10,-1]
+    ids: ['div01','div02','div03']
+
+  zero:
+    datas:
+      - [0,0,0]
+      - [99,0,0]
+      - [0,33.3,0]
+    ids: ['div01','div02','div03']
 #相当于[[1,1,2],[100,200,300],[1,0,1]]
 
