--- a/testDatas/yamlData.yml
+++ b/testDatas/yamlData.yml
@@ -12,7 +12,7 @@ add:
       - [-5,5,0]
       - [-110,-3,-113]
       - [-2,88,86]
-    ids: ['hundr','zero','zero2','fushu','zhengshu']
+    ids: ['hundr','zero','zero2','fushu','整数']
 
 
   float:
@@ -20,7 +20,7 @@ add:
       - [3.1415926,0.1,3.241592]
       - [0.12,0.1,0.22]
       - [-0.25,-0.147,-0.39]
-    ids: ['long','short','fushu']
+    ids: ['long','short','负数']
 
 
 div:
